# Qutiebar

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindAlsa.cmake  FindMPD.cmake
examples/: example_0.conf  example_1.conf
include/: Version.h.in
include/Data/: Backlight.h  Battery.h  Process.h  Volume.h
include/Modules/: AppIcon.h  Clock.h  Desktops.h  DisplayItem.h  Group.h  MusicDisplay.h
include/Utils/: Builder.h  DBusHandler.h  EventHandler.h  Misc.h  MpdConnection.h  Mpris.h  TextScroller.h  UnixSignalHandler.h  WidgetProperties.h  X11EventHandler.h
include/Widgets/: Icon.h  Panel.h  Progress.h  Text.h
man/: qutiebar.1
qmake/: Qutiebar.pro  alsa.pri  dbus.pri  mpd.pri
res/: resources.qrc
src/: Main.cpp
src/Data/: Backlight.cpp  Battery.cpp  Process.cpp  Volume.cpp
src/Modules/: AppIcon.cpp  Clock.cpp  Desktops.cpp  DisplayItem.cpp  Group.cpp  MusicDisplay.cpp
src/Utils/: Builder.cpp  DBusHandler.cpp  EventHandler.cpp  Misc.cpp  MpdConnection.cpp  Mpris.cpp  TextScroller.cpp  UnixSignalHandler.cpp  WidgetProperties.cpp  X11EventHandler.cpp
src/Widgets/: Icon.cpp  Panel.cpp  Progress.cpp  Text.cpp
